--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
+    "start": "node api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +21,16 @@
   "bugs": {
     "url": "https://github.com/Adejarbas/BioDashBD/issues"
   },
-  "homepage": "https://github.com/Adejarbas/BioDashBD#readme"
+  "homepage": "https://github.com/Adejarbas/BioDashBD#readme",
+  "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.76.1",
+    "cors": "^2.8.5",
+    "next": "^16.0.0",
+    "stripe": "^19.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.9.1",
+    "@types/react": "^19.2.2"
+  }
 }
