--- a/package.json
+++ b/package.json
@@ -29,14 +29,18 @@
     "@supabase/supabase-js": "^2.76.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "js-yaml": "^4.1.1",
     "next": "^16.0.0",
     "stripe": "^19.1.0",
     "supabase": "^2.54.11",
+    "swagger-ui-dist": "^5.30.3",
+    "swagger-ui-react": "^5.30.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
+    "@types/swagger-ui-react": "^5.18.0",
     "typescript": "5.9.3"
   }
 }
