--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "next": "^16.0.0",
     "stripe": "^19.1.0",
     "supabase": "^2.54.11",
-    "tailwind-merge": "^3.3.1"
+    "swagger-ui-react": "^5.30.3",
+    "tailwind-merge": "^3.3.1",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "@types/node": "^24.9.1",
