--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/Adejarbas/BioDashBD#readme",
   "dependencies": {
+    "@logtail/node": "^0.5.6",
+    "@logtail/winston": "^0.5.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.76.1",
@@ -32,7 +34,8 @@
     "next": "^16.0.0",
     "stripe": "^19.1.0",
     "supabase": "^2.54.11",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "@types/node": "^24.9.1",
