--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "next": "^16.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "stripe": "^19.1.0",
     "supabase": "^2.54.11",
     "swagger-ui-react": "^5.30.3",
