feat: add Docker support, GitHub Actions CI/CD with Docker Hub, and BetterStack logging

--- a/.github/workflows/versionamento.yml
+++ b/.github/workflows/versionamento.yml
@@ -284,70 +284,89 @@ jobs:
 
             git push origin "v${NEW_VERSION}"
 
-          fi
+          fi  
+
+      - name: Set up Docker Buildx
+        if: steps.version.outputs.should_deploy == 'true' && github.ref == 'refs/heads/main'
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        if: steps.version.outputs.should_deploy == 'true' && github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image (backend)
+        if: steps.version.outputs.should_deploy == 'true' && github.ref == 'refs/heads/main'
+        uses: docker/build-push-action@v5
+        with:
+            context: .
+            file: ./Dockerfile
+            push: true
+            tags: |
+              danielrodriguesadejarbas/biodash-backend:latest
+              danielrodriguesadejarbas/biodash-backend:v${{ steps.version.outputs.new_version }}
+            build-args: |
+              NODE_ENV=production
+              NEXT_PUBLIC_API_BASE_URL=${{ secrets.NEXT_PUBLIC_API_BASE_URL }}
+            cache-from: type=gha
+            cache-to: type=gha,mode=max
  
       # Envio de e-mail EM CASO DE FALHA no pipeline
+      - name: Enviar email se falhar
+        if: failure()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 587
+          secure: false
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          subject: "❌ Falha pipeline Actions - BioDashBD"
+          to: grupobiogen.equipe@gmail.com
+          from: ${{ secrets.EMAIL_USERNAME }}
+          body: |
+            ⚠️ A execução do pipeline FALHOU!
+            
+            📦 Repositório: ${{ github.repository }}
+            🔖 Commit: ${{ github.sha }}
+            ⚙️ Workflow: ${{ github.workflow }}
+            🔧 Job: ${{ github.job }}
+            👤 Autor: ${{ github.actor }}
+            🌿 Branch: ${{ github.ref_name }}
+            
+            🔗 Ver logs completos: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+            
+            --
+            Notificação automática do GitHub Actions
 
-      #- name: Enviar email se falhar
-
-      #  if: failure()
-
-      #  uses: dawidd6/action-send-mail@v6
-
-      #  with:
-
-      #    server_address: smtp.gmail.com
-
-      #    server_port: 587
-
-      #    secure: false
-
-       #   username: ${{ secrets.EMAIL_USERNAME }}
-
-        #  password: ${{ secrets.EMAIL_PASSWORD }}
-
-      #    subject: Falha pipeline Actions
-
-      #    to: fe.dsm.vot.001@gmail.com
-
-       #   from: ${{ secrets.EMAIL_USERNAME }}
-
-        #  body: |
-
-         #   A execução falhou.
-
-          #  Repositório: ${{ github.repository }}
-
-           # Commit: ${{ github.sha }}
-
-            #Workflow: ${{ github.workflow }}
-
-          #  Job: ${{ github.job }}
-
-           # Veja os logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-
-# Cadastrar os dados para envio de e-mail e recupera-los aqui 
-
-
-      # Ex.: SMTP DO SERVIDOR DE E-MAIL / PORTA / USUARIO / SENHA / EMAIL E API/TOKEN PARA ENVIO DE E-MAIL)
-
-      # No gmail há uma configuração para geração de secret para envio de e-mails por aplicativos terceiros
-
-      # E-mail deve ser enviado para: fe.dsm.vot.001@gmail.com
-
-      # Assunto: Falha pipeline Actions
-
-      # Conteúdo: 
-
-          #  A execução falhou.
-
-          #  Repositório: ${{ github.repository }}
-
-          #  Commit: ${{ github.sha }}
-
-          #  Workflow: ${{ github.workflow }}
-
-          #  Job: ${{ github.job }}
-
-          #  Veja os logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+      # Envio de e-mail quando pipeline tiver SUCESSO
+      - name: Enviar email de sucesso
+        if: success()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 587
+          secure: false
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          subject: "✅ Pipeline Actions executado com sucesso - BioDashBD"
+          to: grupobiogen.equipe@gmail.com
+          from: ${{ secrets.EMAIL_USERNAME }}
+          body: |
+            🎉 Pipeline executado com SUCESSO!
+            
+            📦 Repositório: ${{ github.repository }}
+            🔖 Commit: ${{ github.sha }}
+            ⚙️ Workflow: ${{ github.workflow }}
+            🔧 Job: ${{ github.job }}
+            👤 Autor: ${{ github.actor }}
+            🌿 Branch: ${{ github.ref_name }}
+            📌 Versão: v${{ steps.version.outputs.new_version }}
+            
+            🔗 Ver detalhes: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+            
+            --
+            Notificação automática do GitHub Actions
  
