--- a/package.json
+++ b/package.json
@@ -24,16 +24,21 @@
   },
   "homepage": "https://github.com/Adejarbas/BioDashBD#readme",
   "dependencies": {
+    "@logtail/node": "^0.5.6",
+    "@logtail/winston": "^0.5.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.76.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "next": "^16.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "stripe": "^19.1.0",
     "supabase": "^2.54.11",
     "swagger-ui-react": "^5.30.3",
     "tailwind-merge": "^3.3.1",
+    "winston": "^3.18.3",
     "yaml": "^2.8.1"
   },
   "devDependencies": {
